# Algo2TP1BaseDeDatosV2

./: CHANGELOG.md  CMakeLists.txt  README.md
src/: BaseDeDatos.cpp  BaseDeDatos.h  Tabla.cpp  criterio.cpp  criterio.h  restriccion.cpp  restriccion.h
tests/: baseDeDatos-test.cpp  criterio_test.cpp  restriccion_test.cpp
